Cleaned up code and unused imports